modified my whats app link in the chat the admin box

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <div class="content3">School.</div>
       </div>
       <div class="sch">
-        <a href="#" class="schoolbtn" id="chat">chat with the management</a>
+        <a href="http://wa.me/+2349039449932" class="schoolbtn" id="chat"
+          >chat with the management</a
+        >
       </div>
     </section>
     <section id="about">
