delt with overflow

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
   </head>
   <body>
-    <section id="page1">
+    <section id="page1" class="ffg">
       <nav class="pg1nav">
         <span class="mhs">M<a>H</a>S</span>
         <ul id="links">
