--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="page1" class="ffg">
